[gd_scene load_steps=5 format=3 uid="uid://dvdfhpgj25frt"]

[ext_resource type="Theme" uid="uid://b66cxik023bhq" path="res://WoodenTheme.tres" id="1_vx5s8"]
[ext_resource type="Script" uid="uid://b7p7fn4vw2ej5" path="res://Events/SurvivalRandomEvent.gd" id="2_vx5s8"]
[ext_resource type="Texture2D" uid="uid://caedh6vl5fuvg" path="res://Assets/Backgrounds/SURVIVALOFTHEFITTEST.png" id="3_vx5s8"]
[ext_resource type="AudioStream" uid="uid://gucv8pt2vkpe" path="res://Assets/Sounds/random_encounter_bgm.mp3" id="4_hpg2l"]

[node name="SurvivalRandomEvent" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_vx5s8")
script = ExtResource("2_vx5s8")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_vx5s8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="EndDialog" type="AcceptDialog" parent="CanvasLayer"]
unique_name_in_owner = true
initial_position = 1
theme = ExtResource("1_vx5s8")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -173.0
offset_top = 286.0
offset_right = 173.0
offset_bottom = 422.0
grow_horizontal = 2
grow_vertical = 2

[node name="BeetleList" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_vx5s8")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_vx5s8")

[node name="AFightBreaksOut" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "A FIGHT BREAKS OUT"

[node name="bgm" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_hpg2l")
autoplay = true

[connection signal="confirmed" from="CanvasLayer/EndDialog" to="." method="_on_end_dialog_confirmed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/VBoxContainer/AFightBreaksOut" to="." method="_on_a_fight_breaks_out_pressed"]
